@@ -5,6 +5,7 @@ Leeway Changelog
 Version 1.1.6
 -----------------------------------
 [added] custom header image settings
+[added] theme links in theme options panel
 
 Version 1.1.5
 -----------------------------------
